Fix timeline dot-3 position on mobile: align with SVG path

--- a/style.css
+++ b/style.css
@@ -546,7 +546,7 @@ label {
     .tl-label { font-size: 16px; }
     .tl-r1-left  { left: 5%; }
     .tl-r1-right { left: 48%; }
-    .tl-r2-left  { left: 12%; }
+    .tl-r2-left  { left: 24%; }
     .tl-r2-right { left: 52%; }
     
 }
